[gd_scene load_steps=3 format=3 uid="uid://b2i3gfx4exq0"]

[ext_resource type="Script" path="res://rpg/level_up.gd" id="1_fdgju"]

[sub_resource type="Theme" id="Theme_ic2xp"]
default_font_size = 40
Label/font_sizes/font_size = 40

[node name="LevelUp" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -48.0
offset_right = 113.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fdgju")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -45.0
offset_right = 112.5
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ic2xp")
bbcode_enabled = true
text = "[center]LEVEL UP![/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RockButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rock"

[node name="PaperButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Paper"

[node name="ScissorsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Scissors"

[node name="HealButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Heal"
